Fixed a bit of small screen overflow and added Portfolio webpage, done from school

--- a/kontakt/style.css
+++ b/kontakt/style.css
@@ -35,8 +35,8 @@ body.menuOpen {
     font-family:arial;
     font-size:2vh;
     color:rgb(240, 240, 230);
-    margin-top:7vh;
-    height:10vh;
+    margin-top:6vh;
+    height:8vh;
     width:90vw;
 }
 .selectButton:hover {
@@ -48,7 +48,7 @@ body.menuOpen {
         0 0 80px #00bfff;
 }
 #svoren {
-    margin-top: 7vh;
+    margin-top: 6vh;
     font-size: 30px;
 }
 #svoren a:hover {
